Added new page - Tags

--- a/Blogengine/blog/templates/blog/index.html
+++ b/Blogengine/blog/templates/blog/index.html
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ post.title }}</h5>
                     <p class="card-text">{{ post.body }}</p>
-                    <a href="{% url 'current_post_url' slug=post.slug %}" class="btn btn-primary">Read</a>
+                    <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read</a>
                 </div>
             </div>
         </div>
