--- a/Blogengine/blog/templates/blog/index.html
+++ b/Blogengine/blog/templates/blog/index.html
@@ -12,25 +12,6 @@
 {% block content %}
 <h1>Posts: </h1>
     {% for post in posts %}
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{ post.title }}</h5>
-                    <p class="card-text">{{ post.body }}</p>
-                    <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{ post.title }}</h5>
-                    <p class="card-text">{{ post.body }}</p>
-                    <a href="{% url 'current_post_url' slug=post.slug%}" class="btn btn-primary">Read</a>
-                </div>
-            </div>
-        </div>
-    </div>
+        {% include 'blog/includes/post_card_template.html' %}
     {% endfor %}
 {% endblock %}
