--- a/Blogengine/blog/templates/blog/index.html
+++ b/Blogengine/blog/templates/blog/index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <h1>Posts: </h1>
-    {% for post in posts %}
+    {% for post in page.object_list %}
         {% include 'blog/includes/post_card_template.html' %}
     {% endfor %}
 {% endblock %}
