New functions: - CSS styles fixed

--- a/Blogengine/blog/templates/blog/base_blog.html
+++ b/Blogengine/blog/templates/blog/base_blog.html
@@ -12,4 +12,5 @@
 
     <a href="{{ admin_obj.get_update_url }}" class="btn btn-light edit" style="{% if detail %}display: block;{% endif %}">Edit</a>
     <a href="{{ admin_obj.get_delete_url }}" class="btn btn-danger delete" style="{% if detail %}display: block;{% endif %}">Delete</a>
+    </div>
 {% endblock %}
